--- a/index.css
+++ b/index.css
@@ -370,4 +370,8 @@ p.about__container-link {
     .about__container {
         padding: 20px;
     }
+    
+    .project__container {
+        padding: 200px 40px 0;
+    }
 }
