--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: Hatton;
-    src: url(fonts/Hatton-Medium.otf);
+    src: url(fonts/Hatton-Ultralight.otf);
  }
 
 * {
