--- a/index.css
+++ b/index.css
@@ -219,6 +219,11 @@ p.about__container-link {
     font-family: Cynere;
     font-size: 140px;
 }
+.project__container-title h1 span{
+    color: #000;
+    font-family: Cynere;
+    font-size: 40px;
+}
 
 .project__container-subtitle {
     margin: 20px 0;
