--- a/index.css
+++ b/index.css
@@ -219,7 +219,7 @@ p.about__container-link {
     font-family: Cynere;
     font-size: 140px;
 }
-.project__container-title h1 span{
+.project__container-title span{
     color: #000;
     font-family: Cynere;
     font-size: 40px;
