--- a/index.css
+++ b/index.css
@@ -218,6 +218,7 @@ p.about__container-link {
     color: #000;
     font-family: Cynere;
     font-size: 120px;
+    font-weight: 400;
 }
 
 .project__container-subtitle {
