--- a/index.css
+++ b/index.css
@@ -158,6 +158,7 @@ nav {
     margin: 60px 0;
     color: #000;
     font-size: 46px;
+    line-height: 52px;
     font-weight: 400;
     z-index: 2;
 }
