--- a/index.css
+++ b/index.css
@@ -140,7 +140,7 @@ nav {
     }
 }
 
-/* about page styles */
+/* about page styles ------------------------------------------------------------------------------------------------*/
 
 #js-scroll {
     height: 200%;
@@ -158,7 +158,7 @@ nav {
     margin: 60px 0;
     color: #000;
     font-size: 46px;
-    line-height: 52px;
+    line-height: 54px;
     font-weight: 400;
     z-index: 2;
 }
@@ -178,7 +178,7 @@ p.about__container-link {
 .about__container-link a {
     color: #000;
     font-size: 26px;
-    line-height: 28px;
+    line-height: 24px;
 }
 
 .cursor-follow {
@@ -205,7 +205,7 @@ p.about__container-link {
     }
 }
 
-/* project section */
+/* project section ------------------------------------------------------------------------------------------------*/
 
 .project__container {
     width: 70%;
@@ -352,7 +352,7 @@ p.about__container-link {
 
     .about__container p {
         font-size: 24px;
-        line-height: 28px;
+        line-height: 30px;
     }
 
     p.about__container-link {
