--- a/index.css
+++ b/index.css
@@ -358,6 +358,7 @@ p.about__container-link {
 
     p.about__container-link {
         font-size: 20px;
+        line-height: 24px;
     }
 
     .about__container-link a{
