--- a/index.css
+++ b/index.css
@@ -245,7 +245,7 @@ p.about__container-link {
 }
 
 .project__image-one {
-    background: url(images/p1.png) no-repeat 50% 50%;
+    background: url(images/P1.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
