--- a/index.css
+++ b/index.css
@@ -245,7 +245,7 @@ p.about__container-link {
 }
 
 .project__image-one {
-    background: url(images/P1.png) no-repeat 50% 50%;
+    background: url(images/f1.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -253,14 +253,14 @@ p.about__container-link {
     position: relative;
     top: -100px;
     left: -260px;
-    background: url(images/p2.png) no-repeat 50% 50%;
+    background: url(images/f2.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
 .project__image-three {
     position: relative;
     left: 300px;
-    background: url(images/p3.png) no-repeat 50% 50%;
+    background: url(images/f3.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -268,7 +268,7 @@ p.about__container-link {
     position: relative;
     top: -200px;
     left: -100px;
-    background: url(images/p4.png) no-repeat 50% 50%;
+    background: url(images/f4.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -276,7 +276,7 @@ p.about__container-link {
     position: relative;
     top: 0px;
     left: -260px;
-    background: url(images/p5.png) no-repeat 50% 50%;
+    background: url(images/f5.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -284,7 +284,7 @@ p.about__container-link {
     position: relative;
     top: -500px;
     left: 200px;
-    background: url(images/p6.png) no-repeat 50% 50%;
+    background: url(images/f6.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
