--- a/index.css
+++ b/index.css
@@ -284,7 +284,7 @@ p.about__container-link {
     position: relative;
     top: -500px;
     left: 200px;
-    background: url(images/f6.png) no-repeat 50% 50%;
+    background: url(images/t6.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
