--- a/index.css
+++ b/index.css
@@ -253,7 +253,7 @@ p.about__container-link {
     position: relative;
     top: -100px;
     left: -260px;
-    background: url(images/f2.png) no-repeat 50% 50%;
+    background: url(images/c2.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
