--- a/index.css
+++ b/index.css
@@ -268,7 +268,7 @@ p.about__container-link {
     position: relative;
     top: -200px;
     left: -100px;
-    background: url(images/f4.png) no-repeat 50% 50%;
+    background: url(images/zen.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -276,7 +276,7 @@ p.about__container-link {
     position: relative;
     top: 0px;
     left: -260px;
-    background: url(images/f5.png) no-repeat 50% 50%;
+    background: url(images/f4.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -284,7 +284,7 @@ p.about__container-link {
     position: relative;
     top: -500px;
     left: 200px;
-    background: url(images/t6.png) no-repeat 50% 50%;
+    background: url(images/f5.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
