--- a/index.css
+++ b/index.css
@@ -268,7 +268,7 @@ p.about__container-link {
     position: relative;
     top: -200px;
     left: -100px;
-    background: url(images/zen.png) no-repeat 50% 50%;
+    background: url(images/zen2.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
